--- a/photos.html
+++ b/photos.html
@@ -12,6 +12,7 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles.css">
+  <script src="language.js"></script>
   <title>渥太华首都中文学校</title>
 </head>
 
@@ -22,7 +23,8 @@
       <img class="d-none d-md-block logo-img img-fluid"  src="img/OCCSLogo.png">
       <div class="d-flex flex-column align-items-center">
         <div class="d-sm-flex d-block flex-nowrap">
-          <p class="navbar-brand mr-5 ml-5 title" href="#">渥太华首都中文学校</p>
+          <p class="mando navbar-brand mr-5 ml-5 title" href="#">渥太华首都中文学校</p>
+          <p class="canto navbar-brand mr-5 ml-5 title" href="#">渥太華首都中文學校</p>
         </div>
         <p class="sub-title">Ottawa Capital Chinese School</p>
       </div>
@@ -87,6 +89,8 @@
   </div> -->
 
   <div class="container">
+
+    <div style="visibility: hidden;"><button class="btn btn-link" id="mandarin-btn">Mandarin 普通话</button> | <button class="btn btn-link" id="cantonese-btn">Cantonese 粤语</button></div>
 
     <div class="flex-column">
       <a class="d-flex justify-content-start" href="index.html"><button class="btn mr-4"><i
