--- a/interest.html
+++ b/interest.html
@@ -12,6 +12,8 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles.css">
+  <script src="language.js"></script>
+
   <title>渥太华首都中文学校</title>
 </head>
 
@@ -22,7 +24,8 @@
       <img class="d-none d-md-block logo-img img-fluid"  src="img/OCCSLogo.png">
       <div class="d-flex flex-column align-items-center">
         <div class="d-sm-flex d-block flex-nowrap">
-          <p class="navbar-brand mr-5 ml-5 title" href="#">渥太华首都中文学校</p>
+          <p class="mando navbar-brand mr-5 ml-5 title" href="#">渥太华首都中文学校</p>
+          <p class="canto navbar-brand mr-5 ml-5 title" href="#">渥太華首都中文學校</p>
         </div>
         <p class="sub-title">Ottawa Capital Chinese School</p>
       </div>
@@ -36,39 +39,50 @@
 
       <!-- SideNav -->
       <div class="col-lg-3 col-md-4">
+        <div class="ml-1 row justify-content-start">
+          <div><button class="btn btn-link" id="mandarin-btn">Mandarin 普通话</button> | <button class="btn btn-link" id="cantonese-btn">Cantonese 粤语</button></div>
+        </div>
         <nav class="user_nav">
           <ul class="list-group">
             <li class="list-group-item">
-              <a class="nav-link" href="index.html"><i class="fa fa-home"></i> Home | 首页</a>
+              <a class="mando nav-link" href="index.html"><i class="fa fa-home"></i> Home | 首页</a>
+              <a class="canto nav-link" href="index.html"><i class="fa fa-home"></i> Home | 首頁</a>
             </li>
 
             <li class="list-group-item">
-              <a class="nav-link" href="courses.html"><i class="fa fa-book"></i> Courses | 课程介绍</a>
+              <a class="mando nav-link" href="courses.html"><i class="fa fa-book"></i> Courses | 课程介绍</a>
+              <a class="canto nav-link" href="courses.html"><i class="fa fa-book"></i> Courses | 課程介紹</a>
             </li>
 
             <li class="list-group-item active">
-              <a class="nav-link" href="interest.html"><i class="fa fa-certificate"></i> Interest Classes | 兴趣课</a>
+              <a class="mando nav-link" href="interest.html"><i class="fa fa-certificate"></i> Interest Classes | 兴趣课</a>
+              <a class="canto nav-link" href="interest.html"><i class="fa fa-certificate"></i> Interest Classes | 興趣課</a>
             </li>
 
             <li class="list-group-item">
-              <a class="nav-link" href="documents/calendar.pdf"><i class="fa fa-calendar"></i> Calendar | 学校校历</a>
+              <a class="mando nav-link" href="documents/calendar.pdf"><i class="fa fa-calendar"></i> Calendar | 学校校历</a>
+              <a class="canto nav-link" href="documents/calendar.pdf"><i class="fa fa-calendar"></i> Calendar | 學校校歷</a>
             </li>
 
             <br>
             <li class="list-group-item">
-              <a class="nav-link" href="registration.html"><i class="fa fa-file-o"></i> Registration | 注册报名</a>
+              <a class="mando nav-link" href="registration.html"><i class="fa fa-file-o"></i> Registration | 注册报名</a>
+              <a class="canto nav-link" href="registration.html"><i class="fa fa-file-o"></i> Registration | 註冊報名</a>
             </li>
 
             <li class="list-group-item">
-              <a class="nav-link" href="newsletter.html"><i class="fa fa-envelope-open-o"></i> Newsletters | 校园新闻</a>
+              <a class="mando nav-link" href="newsletter.html"><i class="fa fa-envelope-open-o"></i> Newsletters | 校园新闻</a>
+              <a class="canto nav-link" href="newsletter.html"><i class="fa fa-envelope-open-o"></i> Newsletters | 校園新聞</a>
             </li>
 
             <li class="list-group-item">
-              <a class="nav-link" href="photos.html"><i class="fa fa-picture-o"></i> Photos | 相片集锦</a>
+              <a class="mando nav-link" href="photos.html"><i class="fa fa-picture-o"></i> Photos | 相片集锦</a>
+              <a class="canto nav-link" href="photos.html"><i class="fa fa-picture-o"></i> Photos | 相片集錦</a>
             </li>
 
             <li class="list-group-item">
-              <a class="nav-link" href="contact.html"><i class="fa fa-phone"></i> Contact Us | 联系我们</a>
+              <a class="mando nav-link" href="contact.html"><i class="fa fa-phone"></i> Contact Us | 联系我们</a>
+              <a class="canto nav-link" href="contact.html"><i class="fa fa-phone"></i> Contact Us | 聯繫我們</a>
             </li>
           </ul>
         </nav>
@@ -79,11 +93,16 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="jumbotron">
-              <h3 class="text-center">下午学生课外兴趣班</h3>
+              <h3 class="mando text-center">下午学生课外兴趣班</h3>
+              <h3 class="canto text-center">下午學生課外興趣班</h3>
               <hr>
-              <p><strong>时间: </strong>12:10-1:10pm</p>
-              <p><strong>课程: </strong>演讲，声乐，舞蹈，数学，算盘，中国象棋，围棋，
-                武术，绘画，篮球和羽毛球。。</p>
+              <p class="mando"><strong>时间: </strong>12:10-1:10pm</p>
+              <p class="canto"><strong>時間: </strong>12:10-1:10pm</p>
+
+              <p class="mando"><strong>课程: </strong>演讲，声乐，舞蹈，数学，算盘，中国象棋，围棋，
+                武术，绘画，篮球和羽毛球。</p>
+              <p class="canto"><strong>課程: </strong>演講，聲樂，舞蹈，數學，算盤，中國象棋，圍棋，
+                武術，繪畫，籃球和羽毛球。</p>
             </div>
           </div>
           <div class="col-lg-6">
