Remove duplicate picture

--- a/photos.html
+++ b/photos.html
@@ -103,7 +103,7 @@
 
     <hr class="mt-2 mb-5">
 
-    <div class="row text-center text-lg-left">
+    <div class="row text-center text-lg-left align-items-center justify-content-center">
 
       <div class="col-lg-3 col-md-4 col-6">
         <a href="img/photos_2009/1.jpg" class="d-block mb-4 h-100">
@@ -122,7 +122,7 @@
       </div>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="img/photos_2009/4.jpg" class="d-block mb-4 h-100">
-          <img class="img-fluid img-thumbnail" src="img/photos_2009/4.jpg" alt="">
+          <img class="img-fluid img-thumbnail" src="img/school-entrance.jpg" alt="">
         </a>
       </div>
       <div class="col-lg-3 col-md-4 col-6">
