--- a/photos.html
+++ b/photos.html
@@ -90,7 +90,7 @@
 
   <div class="container">
 
-    <div style="visibility: hidden;"><button class="btn btn-link" id="mandarin-btn">Simplified 普通话</button> | <button class="btn btn-link" id="cantonese-btn">Traditional 粵語</button></div>
+    <div style="visibility: hidden;"><button class="btn btn-link" id="mandarin-btn">Simplified 简体</button> | <button class="btn btn-link" id="cantonese-btn">Traditional 繁体</button></div>
 
     <div class="flex-column">
       <a class="d-flex justify-content-start" href="index.html"><button class="btn mr-4"><i
