--- a/interest.html
+++ b/interest.html
@@ -40,7 +40,7 @@
       <!-- SideNav -->
       <div class="col-lg-3 col-md-4">
         <div class="ml-1 row justify-content-start">
-          <div><button class="btn btn-link" id="mandarin-btn">Simplified 普通话</button> | <button class="btn btn-link" id="cantonese-btn">Traditional 粵語</button></div>
+          <div><button class="btn btn-link" id="mandarin-btn">Simplified 简体</button> | <button class="btn btn-link" id="cantonese-btn">Traditional 繁体</button></div>
         </div>
         <nav class="user_nav">
           <ul class="list-group">
