Changes to contact page

--- a/contact.html
+++ b/contact.html
@@ -110,12 +110,12 @@
                 <p class="mando card-text"><strong>电话：</strong>613-293-2129 (周六9:30-12:30 九月至六月)</p>
                 <p class="canto card-text"><strong>電話：</strong>613-293-2129 (週六9:30-12:30 九月至六月)</p>
                 <hr>
-                <p class="card-text"><strong>Site Administrator: </strong>Vitus So, B.A., B.S.S. , M.A., B. Ed.,
+                <p class="card-text"><strong>Site Administrator: </strong>Vitus So, B.A., B.S.S., M.A., B. Ed.,
                   Principal Qualification
                 </p>
                 <p class="card-text"><strong>Email: </strong>vitus.so@ocsb.ca</p>
                 <p class="card-text"><strong>Address: </strong>710 BROADVIEW AVE, OTTAWA</p>
-                <p class="card-text"><strong>Phone: </strong>613-293-2129 Saturday (9:30am-12:30pm Sept. to June)</p>
+                <p class="card-text"><strong>Phone: </strong>613-293-2129 Saturday (9:30am-12:30pm September to June)</p>
               </div>
             </div>
           </div>
