--- a/newsletter.html
+++ b/newsletter.html
@@ -90,70 +90,34 @@
       <div class="col-lg-9 col-md-8">
         <div class="jumbotron">
           <h4 class="text-center">Important Information for Parents and Students</h4>
-          <p class="text-center blockquote-footer">December 7, 2019</p>
+          <p class="text-center blockquote-footer">January 2024</p>
           <hr>
           <ol>
             <li>
-              As the winter season has arrived, we would like to remind you about the traffic regulation
-              at the Chinese School. In order to avoid congestion and accident in the Parking Lot, please
-              <b>Do Not Park in the Fire Lane Zone or no parking area, violator will be ticketed from the City of Ottawa.</b>
+              As the winter season is in place, we would like to remind you about the traffic regulation at the Chinese School.
+              In order to avoid congestion and accidents in the Parking  Lot, please <b>Do Not Park in the Fire Lane Zone or no
+              parking area, violator will be ticketed from the City of Ottawa.</b>
             </li>
-            <li>Afternoon Interest class registration for next term will start on December 7, 2019 in room 230.</li>
-            <li>There will be no school on</li>
-            <ul>
-              <li>Christmas Holiday: Dec 21, 28 and Jan 4, 2020.  Classes will resume on Jan 11, 2020.</li>
-              <li>Family Day weekend:  Feb 15, 2020</li>
-            </ul>
             <li>
-                The annual <b>Chinese New Year Carnival</b> will be held on January 18, 2020 in the Cafeteria.
-                There will 	be games, prizes, treats, Lion dance and performances to celebrate the “Year of the Mouse”. 
-                <b>Please wear your Chinese outfit and arrive at 10:00 a.m. for this wonderful event.</b>
+              There will be no school on
+              <ul>
+                <li>Family Day weekend: Feb 17, 2024</li>
+              </ul>
             </li>
-            <li>Afternoon Interest class registration for next term will start on January 25, 2020.</li>
+            <li>
+              The annual <b>Chinese Lunar New Year Carnival</b> will be held on February 3, 2024 in the Cafeteria. There
+              will be games, prizes, treats, Lion Dance and Culture Performances to celebrate the “Year of the Dragon”. <b>
+              You are encouraged to wear a Chinese outﬁt for this event.!!!Note:!!There will be no morning classes, please
+              arrive at 10:00 a.m. for this fun event.</b>
+            </li>
+            <li>AAfter School Interest Class registration has started in room 226.   The first day of Interest Class is January 20,
+              there will be no interest class on February 10 due to the Chinese New Year.
+            </li>
+            <li>During the winter season, students are encouraged to bring in their indoor shoes for Saturday school.</li>
             <li>School Address: Notre Dame High School, 710 Broadview Ave.<br>Phone Number for Saturday (Capital Chinese
               School): 613-293-2129</li>
           </ol>
-          <p><small><strong>On behalf of the Capital Chinese School at Notre Dame, wishing you a safe and happy
-                holiday.</small></strong></p>
-
-        </div>
-
-        <!-- Mandarin -->
-        <div class="mando jumbotron">
-          <h4 class="text-center">给家长和学生的重要信息</h4>
-          <hr>
-          <ol>
-            <li>冬季来临，提醒家长请注意中文学校的交通规章, 避免停车场交通堵塞和事故，禁止把车辆停泊在火警区内, 避免被拖车。</li>
-            <li>下学期的兴趣课开始注册：2019年12月 7日 于230教室。请阅读背页上教育局的信。</li>
-            <li>2019年12月21日和28日，2020年1月4日没有中文课，1月11日返校；<br>
-                家庭日周末：2020年2月15日, 没有中文课。
-            </li>
-            <li>春节游戏活动于2020年1月18日在咖啡厅举行，届时将有游戏/奖品/小食品，还有倍受同学和家长	们欢迎的龙舞/狮子舞以及表演等，让我们来共同欢庆鼠年的到来！请在上午10点来参加有趣的活动。</li>
-            <li>下学期的兴趣课于 2020年1月25日开始。</li>
-            <li>首都中文学校地址：Notre Dame High School, 710 Broadview Ave.<br>
-                星期六电话号码（首都中文学校）：613-293-2129</li>
-          </ol>
-          <p><small><strong>在这里代表首都中文学校，祝您和您的家人度过一个安全愉快的假期! </strong></small></p>
-
-        </div>
-
-        <!-- Cantonese -->
-        <div class="canto jumbotron">
-          <h4 class="text-center">給家長和學生的重要信息</h4>
-          <hr>
-          <ol>
-            <li>冬季來臨，提醒家長請注意中文學校的交通規章, 避免停車場交通堵塞和事故，禁止把車輛停泊在火警區內, 避免被拖車。 </li>
-            <li>下學期的興趣課開始註冊：2019年12月 7日 於230教室。請閱讀背頁上教育局的信。 </li>
-            <li>2019年12月21日和28日，2020年1月4日沒有中文課，1月11日返校；<br>
-                家庭日週末：2020年2月15日, 沒有中文課。
-            </li>
-            <li>春節遊戲活動於2020年1月18日在咖啡廳舉行，屆時將有遊戲/獎品/小食品，還有倍受同學和家長	們歡迎的龍舞/獅子舞以及表演等，讓我們來共同歡慶鼠年的到來！請在上午10點來參加有趣的活動。 </li>
-            <li>下學期的興趣課於 2020年1月25日開始。 </li>
-            <li>首都中文學校地址：Notre Dame High School, 710 Broadview Ave.<br>
-                星期六電話號碼（首都中文學校）：613-293-2129</li>
-          </ol>
-          <p><small><strong>在這裡代表首都中文學校，祝您和您的家人度過一個安全愉快的假期! </strong></small></p>
-
+          <p><small><strong>On behalf of the Capital Chinese School at Notre Dame, wishing you the best in 2024.</small></strong></p>
         </div>
       </div>
     </div>
