--- a/newsletter.html
+++ b/newsletter.html
@@ -106,11 +106,11 @@
             </li>
             <li>
               The annual <b>Chinese Lunar New Year Carnival</b> will be held on February 3, 2024 in the Cafeteria. There
-              will be games, prizes, treats, Lion Dance and Culture Performances to celebrate the “Year of the Dragon”. <b>
-              You are encouraged to wear a Chinese outﬁt for this event.!!!Note:!!There will be no morning classes, please
+              will be games, prizes, treats, Lion Dance and Culture Performances to celebrate the “Year of the Dragon”.
+              <b>You are encouraged to wear a Chinese outﬁt for this event. Note: There will be no morning classes, please
               arrive at 10:00 a.m. for this fun event.</b>
             </li>
-            <li>AAfter School Interest Class registration has started in room 226.   The first day of Interest Class is January 20,
+            <li>After School Interest Class registration has started in room 226. The first day of Interest Class is January 20,
               there will be no interest class on February 10 due to the Chinese New Year.
             </li>
             <li>During the winter season, students are encouraged to bring in their indoor shoes for Saturday school.</li>
