--- a/registration.html
+++ b/registration.html
@@ -95,11 +95,12 @@
           <h2 class="mando text-center">Links | 链接</h2>
           <h2 class="canto text-center">Links | 鏈接</h2>
           <hr>
+          <li><a href="documents/2024 Afternoon Camp Information.pdf">2024 Summer afternoon camp information</a></li>
+          <li><a href="documents/2024 Afternoon Camp Registration Form.pdf">2024 Summer afternoon camp registration form</a></li>
+          <li><a href="https://conted.ocsb.ca/summer-programs/summer-international-languages-elementary/">2023 Summer Morning Session Registration Link</a></li>
           <li><a href="https://conted.ocsb.ca/elementary/international-languages-elementary/">Fall 2023: Elementary Registration</a></li>
           <li><a href="https://conted.ocsb.ca/secondary/international-languages-credit-program/">Fall 2023: Secondary Registration</a></li>
           <li><a href="http://conted.ocsb.ca/summer/elementary-summer-il">2023 Summer School Registration</a></li>
-          <li><a href="documents/SummerCamp2023Information.pdf">2023 Summer afternoon camp information</a></li>
-          <li><a href="documents/AfternoonCampRegistrationForm2023.pdf">2023 Summer afternoon camp registration form</a></li>
           <li><a href="documents/SampleScheduleFrom2019.pdf">Sample afternoon camp schedule from 2019</a></li>
         </div>
 
