--- a/interest.html
+++ b/interest.html
@@ -96,6 +96,9 @@
               <h3 class="mando text-center">下午学生课外兴趣班</h3>
               <h3 class="canto text-center">下午學生課外興趣班</h3>
               <hr>
+              <p class="mando">兴趣班将于上课时间在现场报名。</p>
+              <p class="canto">興趣班將於上課時間在現場報名。</p>
+
               <p class="mando"><strong>时间: </strong>12:10-1:10pm</p>
               <p class="canto"><strong>時間: </strong>12:10-1:10pm</p>
 
@@ -109,6 +112,7 @@
             <div class="jumbotron">
               <h3 class="text-center">Afternoon extra activities:</h3>
               <hr>
+              <p>Interest Classes will be registered on site during school hours.</p>
               <p><strong>Time: </strong>12:10-1:10pm</p>
               <p><strong>Activities: </strong>Public Speaking, Singing, Dancing, Mathematics, Abacus, Chinese Chess,
                 Go, Kungfu, Drawing, Basketball, and Badminton.</p>
