Fix typos and wordings

--- a/courses.html
+++ b/courses.html
@@ -101,16 +101,16 @@
               <p class="mando"><strong>时间：</strong>每年九月初至六月，周六上午9:30至中午12点。</p>
               <p class="canto"><strong>時間：</strong>每年九月初至六月，週六上午9:30至中午12點。</p>
 
-              <p class="mando"><strong>班级：</strong>普通话，廣東話：幼儿园低班到12级，成人班。</p>
-              <p class="canto"><strong>班級：</strong>普通话，廣東話：幼兒園低班到12級，成人班。</p>
+              <p class="mando"><strong>班级：</strong>国语，普通话，廣東話：幼儿园低班到12级，成人班。</p>
+              <p class="canto"><strong>班級：</strong>國語，普通话，廣東話：幼兒園低班到12級，成人班。</p>
 
               <p class="mando"><strong>下午学生课外兴趣班 (12:10-1:10pm)：</strong>演讲，声乐，舞蹈，数学，算盘，中国象棋，围棋，
                 武术，绘画，篮球和羽毛球。</p>
               <p class="canto"><strong>下午學生課外興趣班 (12:10-1:10pm)：</strong>演講，聲樂，舞蹈，數學，算盤，中國象棋，圍棋，
                 武術，繪畫，籃球和羽毛球。</p>
 
-              <p class="mando"><strong>家长室内活动包括：</strong>篮球羽，毛球，舞蹈和瑜伽。</p>
-              <p class="canto"><strong>家長室內活動包括：</strong>籃球羽，毛球，舞蹈和瑜伽。 </p>
+              <p class="mando"><strong>家长室内活动包括：</strong>篮球，羽毛球，舞蹈和瑜伽。</p>
+              <p class="canto"><strong>家長室內活動包括：</strong>籃球，羽毛球，舞蹈和瑜伽。 </p>
             </div>
             <div class="col-lg-6">
               <h3 class="mando text-center mt-6">暑期班</h3>
@@ -129,7 +129,7 @@
               <h3 class="text-center">Fall/Winter Term</h3>
               <hr>
               <p><strong>Time: </strong>Beginning of September to June Saturdays, 9:30am to 12:00pm</p>
-              <p><strong>Class: </strong>(simplified Mandarin and Cantonese) A total of 14 levels from Junior Kindergarden to level
+              <p><strong>Class: </strong>(Cantonese, Traditional Mandarin and Simplified Mandarin) A total of 14 levels from Junior Kindergarden to level
                 12, Adult Class</p>
               <p><strong>Afternoon extra activities (12:10-1:10pm): </strong>Public Speaking, Singing, Dancing, Mathematics, Abacus, Chinese Chess,
                 Go, Kungfu, Drawing, Basketball, and Badminton.</p>
